Commited changes to page structure

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <div class="main-buttons">
         <p>
-          <a href="" class="underline-style main-button">Contact Me</a><br class="small-break">
+          <a href="#contact-form" class="underline-style main-button">Contact Me</a><br class="small-break">
           <a href=""class="underline-style main-button">Download Resume</a>
         </p>
       </div>
@@ -96,7 +96,7 @@
             <h3 class="exp-head">Data Science</h3>
             <p class="exp-desc">
               3 Year Experience <br>
-              <span class = "hide">Languaguages: R, SQL, NoSQL><br>
+              <span class = "hide">Languaguages: R, SQL, NoSQL<br>
               Skills: Machine Learning, Database Adminstration</span>
             </p>
           </div>
@@ -149,9 +149,9 @@
           <div class="proj-img-container">
             <img src="assets/images/thumbnail-project-1-large.webp" alt="">
           </div>
-          <h3 class="proj-head">Software Developer</h3>
+          <h3 class="proj-head">Machine Learning Portfolio</h3>
           <p class="proj-desc">
-            HTML, CSS
+            HTML, CSS, R
           </p>
         </div>
 
@@ -196,7 +196,7 @@
           <img src="assets/images/pattern-rings.svg" alt="spiral image" class = "spiral-img">  
         </div>
       
-        <div class="contact-form contact-item">
+        <div class="contact-form contact-item" id = "contact-form">
           <form action="#">
             <label for=""></label>
             <input type="text" name = "name" placeholder="NAME" width="10"> <br>
