Added bliking arrow to hero section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
           <img src="assets/images/image-profile.png" alt="profile-photo">
         </div>
       </div>
-      <hr class="divider">
+
+      <section id="section" class="demo">
+        <a href="#"><span></span></a>
+      </section>
+
     </section>
     
     <!-- 
