Updated Arrow link

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       </div>
 
       <section id="section" class="demo">
-        <a href="#"><span></span></a>
+        <a href="#experience"><span></span></a>
       </section>
 
     </section>
 
-    <section class="experience">
+    <section class="experience" id = "experience">
       
       <h2>Skills</h2>
       <div class="exp-cards">
